--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -37,8 +37,8 @@
         android:enabled="true"
         android:icon="@drawable/auto_play"
         android:shortcutId="autoOn1"
-        android:shortcutLongLabel="@string/auto_on"
-        android:shortcutShortLabel="@string/auto_tun_on">
+        android:shortcutLongLabel="@string/start_auto"
+        android:shortcutShortLabel="@string/start_auto">
         <intent
             android:action="START"
             android:targetClass="com.zaneschepke.wireguardautotunnel.service.shortcut.ShortcutsActivity"
@@ -53,8 +53,8 @@
         android:enabled="true"
         android:icon="@drawable/auto_pause"
         android:shortcutId="autoOff1"
-        android:shortcutLongLabel="@string/auto_off"
-        android:shortcutShortLabel="@string/auto_tun_off">
+        android:shortcutLongLabel="@string/stop_auto"
+        android:shortcutShortLabel="@string/stop_auto">
         <intent
             android:action="STOP"
             android:targetClass="com.zaneschepke.wireguardautotunnel.service.shortcut.ShortcutsActivity"
