--- a/app/src/main/res/values/ic_banner_background.xml
+++ b/app/src/main/res/values/ic_banner_background.xml
@@ -1,2 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+	<color name="ic_banner_background">#1D1A20</color>
+</resources>
