fix: toggle resolution issue
#669

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black_background">#FF1c1b20</color>
+    <color name="background">#FF21272A</color>
 </resources>
