feat: variable number tunnel export with file explorer support
feat: listen for user present AndroidTV
#606
closes #704

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-	<files-path
-		name="share"
-		path="external_files/"/>
+	<files-path name="files" path="." />
+	<external-path name="external_files" path="." />
 </paths>
