feat: add in-app updater for release versions closes #636

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths>
 	<files-path name="files" path="." />
 	<external-path name="external_files" path="." />
+	<external-files-path name="apks" path="/" />
 </paths>
